--- a/index.html
+++ b/index.html
@@ -6,6 +6,77 @@
     <title>Projeto Cordel</title>
 </head>
 <body>
-    
+    <header>
+       <h1>Cordel Moderno</h1>
+       <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p> 
+    </header>
+    <main>
+        <section class="normal">
+            <p> Estou ficando cansado
+                Da tal tecnologia
+                Só se fala por e-mail
+                Mensagem curta e fria
+                Twitter e Facebook
+                Antes que eu caduque
+                Vou dizer tudo em poesia.</p>  
+        </section>
+        <section class="bg">
+            <p> Não é mais como era antes
+                É tudo abreviado
+                "Você" só tem duas letras
+                O "O" e o "E" foi riscado
+                Para declarar o amor
+                Basta botar uma flor
+                E um coração desenhado.</p>
+        </section>
+        <section class="normal">
+            <p> Arroba agora não pesa
+                É parte de um endereço
+                Ponto final nem se usa
+                Ou vai até no começo
+                Agora é .com
+                Se o saite é muito bom
+                Ele vale um alto preço.
+            </p>
+
+            <P> Pra piorar a liguagem
+                O emoticom é um risco
+                Tem símbolo para tudo
+                Ponto e vírgula e um asterisco
+                Um beijo significa
+                Pra entender como fica
+                Decifre esse rabisco.
+            </P>  
+        </section>
+        <section class="bg">
+            <p> Tenho saudade das cartas
+                Escritas com a própria mão
+                Mandava no mês de Junho
+                Só chegava no Verão
+                Mas matava a saudade
+                Era texto de verdade
+                Nas linhas do coração.
+            </p> 
+        </section>
+        <section class="normal">
+            <p> Agora, escrevo e envio
+                Chegando na mesma hora
+                Mas quando vou prosear
+                A pessoa foi embora
+                Abriu outro aplicativo
+                O mundo ficou cativo
+                Da tecnologia do agora.
+            </p>
+            <p> Felizmente, pra orar
+                Não precisa de internet
+                Deus escuta todo mundo
+                Se quiser, faça esse teste
+                Dois pontos são dois joelhos
+                Seus lábios são aparelhos
+                Deixe que Deus interprete.
+            </p>
+        </section>
+    </main>
+    <footer>Site criado por <a href="https://github.com/tallesfer" target="_blank">Talles</a> para o <a href="http://cursoemvideo.com/" target="_blank">CursoemVideo</a></footer>
 </body>
 </html>
